engine/tests/fixtures/invalid/missing-reference/cap-bad.tg
capability cap_bad {
  name "Broken Capability"
  description "References a missing shape"

  reads [entity_missing]
  input [shape_missing]
  output [shape_missing]

  status active
}
